# fairsearch-deltr-for-elasticsearch

./: .gitignore  README.md  deltr.py  index.py  prepare.py  requirements.txt  search.py  setup.cfg  setup.py  train.py  utils.py
data/: features.json  judgements-with-features.csv  queries.csv
fairsearchdeltres/: main.py
