[default]
ESHost = http://localhost:9200
ESUser = your_es_user
ESPassword = your_es_pass
FeatureSetName = w3c_features
FeatureSetNameFile = ./data/features.json
DocumentDir = ./data/candidates
JudgmentsFile = ./data/judgements.csv
FeaturesFile = features.csv
QueriesFile = ./data/queries.csv
ModelFile = model.txt
ModelName = deltr_vanilla
IndexName = resumes

[metadata]
description-file=README.md

[aliases]
test=pytest